[gd_scene load_steps=4 format=3 uid="uid://2wldfpcvs7wa"]

[ext_resource type="Script" path="res://scripts/ui/menu_lobby.gd" id="1_y2i2o"]
[ext_resource type="StyleBox" uid="uid://chvlw8pqinkx3" path="res://resources/styles/menu_panel.tres" id="2_is1tw"]
[ext_resource type="Theme" uid="uid://bycwepbj8cxa4" path="res://resources/styles/theme.tres" id="3_rcyc5"]

[node name="LobbyMenu" type="Control" node_paths=PackedStringArray("player_list", "nickname", "ip_address", "error_msg", "host_button", "join_button", "play_button", "option_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y2i2o")
player_list = NodePath("Players/Margin/Vertical/Players/PlayerList")
nickname = NodePath("SelectMenu/Margin/Vertical/Top/Vertical/NameHost/NickName")
ip_address = NodePath("SelectMenu/Margin/Vertical/Top/Vertical/JoinIP/IPAddress")
error_msg = NodePath("SelectMenu/Margin/Vertical/Top/Vertical/ErrorMessage")
host_button = NodePath("SelectMenu/Margin/Vertical/Top/Vertical/NameHost/Host")
join_button = NodePath("SelectMenu/Margin/Vertical/Top/Vertical/JoinIP/Join")
play_button = NodePath("Players/Margin/Vertical/GameInfo/VBoxContainer2/PlayButton")
option_button = NodePath("Players/Margin/Vertical/GameInfo/VBoxContainer3/VBoxContainer/OptionButton")

[node name="SelectMenu" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 267.0
offset_top = 183.0
offset_right = -267.0
offset_bottom = -183.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_is1tw")

[node name="Margin" type="MarginContainer" parent="SelectMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Vertical" type="VBoxContainer" parent="SelectMenu/Margin"]
layout_mode = 2

[node name="Top" type="VBoxContainer" parent="SelectMenu/Margin/Vertical"]
layout_mode = 2
theme_override_constants/separation = 25
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="SelectMenu/Margin/Vertical/Top"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "MULTIPLAYER"
horizontal_alignment = 1

[node name="Vertical" type="VBoxContainer" parent="SelectMenu/Margin/Vertical/Top"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NameHost" type="HBoxContainer" parent="SelectMenu/Margin/Vertical/Top/Vertical"]
layout_mode = 2

[node name="NickName" type="LineEdit" parent="SelectMenu/Margin/Vertical/Top/Vertical/NameHost"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 22
placeholder_text = "YOUR_NAME"
max_length = 20

[node name="Host" type="Button" parent="SelectMenu/Margin/Vertical/Top/Vertical/NameHost"]
layout_mode = 2
theme = ExtResource("3_rcyc5")
theme_override_font_sizes/font_size = 33
text = "HOST"

[node name="JoinIP" type="HBoxContainer" parent="SelectMenu/Margin/Vertical/Top/Vertical"]
layout_mode = 2

[node name="IPAddress" type="LineEdit" parent="SelectMenu/Margin/Vertical/Top/Vertical/JoinIP"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 22
text = "127.0.0.1"
placeholder_text = "HOST_ADDRESS"
max_length = 15

[node name="Join" type="Button" parent="SelectMenu/Margin/Vertical/Top/Vertical/JoinIP"]
layout_mode = 2
theme = ExtResource("3_rcyc5")
theme_override_font_sizes/font_size = 33
button_mask = 3
text = "JOIN"

[node name="HideAddress" type="CheckButton" parent="SelectMenu/Margin/Vertical/Top/Vertical"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 22
text = "HIDE_ADDRESS"
alignment = 1

[node name="ErrorMessage" type="Label" parent="SelectMenu/Margin/Vertical/Top/Vertical"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.97, 0.0776, 0.0776, 1)
theme_override_font_sizes/font_size = 22
text = "WRONG_NAME"

[node name="Bottom" type="VBoxContainer" parent="SelectMenu/Margin/Vertical"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SelectMenu/Margin/Vertical/Bottom"]
layout_mode = 2
theme_override_constants/separation = 150
alignment = 1

[node name="BackToMenu" type="Button" parent="SelectMenu/Margin/Vertical/Bottom/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_rcyc5")
theme_override_font_sizes/font_size = 33
text = "BACK"

[node name="Players" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 89.0
offset_top = 44.0
offset_right = -89.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_is1tw")

[node name="Margin" type="MarginContainer" parent="Players"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35
metadata/_edit_use_anchors_ = true

[node name="Vertical" type="HBoxContainer" parent="Players/Margin"]
layout_mode = 2
size_flags_vertical = 3

[node name="Players" type="VBoxContainer" parent="Players/Margin/Vertical"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="Players/Margin/Vertical/Players"]
layout_mode = 2
theme_override_font_sizes/font_size = 33
text = "PLAYERS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerList" type="ItemList" parent="Players/Margin/Vertical/Players"]
layout_mode = 2
theme_override_font_sizes/font_size = 33
auto_height = true

[node name="VBoxContainer" type="VBoxContainer" parent="Players/Margin/Vertical/Players"]
layout_mode = 2
size_flags_vertical = 10
alignment = 2

[node name="BackToSelect" type="Button" parent="Players/Margin/Vertical/Players/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 33
text = "BACK"

[node name="GameInfo" type="VBoxContainer" parent="Players/Margin/Vertical"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="Players/Margin/Vertical/GameInfo"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Players/Margin/Vertical/GameInfo/VBoxContainer3"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="Players/Margin/Vertical/GameInfo/VBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_rcyc5")
allow_reselect = true

[node name="VBoxContainer2" type="VBoxContainer" parent="Players/Margin/Vertical/GameInfo/VBoxContainer3"]
layout_mode = 2

[node name="Button" type="Button" parent="Players/Margin/Vertical/GameInfo/VBoxContainer3/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("3_rcyc5")
text = "new_save"

[node name="VBoxContainer2" type="VBoxContainer" parent="Players/Margin/Vertical/GameInfo"]
layout_mode = 2
size_flags_vertical = 10
alignment = 2

[node name="PlayButton" type="Button" parent="Players/Margin/Vertical/GameInfo/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("3_rcyc5")
theme_override_font_sizes/font_size = 33
text = "PLAY"

[connection signal="button_up" from="SelectMenu/Margin/Vertical/Top/Vertical/NameHost/Host" to="." method="_on_host_button_up"]
[connection signal="button_up" from="SelectMenu/Margin/Vertical/Top/Vertical/JoinIP/Join" to="." method="_on_join_button_up"]
[connection signal="toggled" from="SelectMenu/Margin/Vertical/Top/Vertical/HideAddress" to="." method="_on_hide_address_toggled"]
[connection signal="tree_exited" from="SelectMenu/Margin/Vertical/Top/Vertical/HideAddress" to="SelectMenu/Margin/Vertical/Top/Vertical/HideAddress" method="_on_tree_exited"]
[connection signal="button_up" from="SelectMenu/Margin/Vertical/Bottom/HBoxContainer/BackToMenu" to="." method="_on_back_to_menu_button_up"]
[connection signal="button_up" from="Players/Margin/Vertical/Players/VBoxContainer/BackToSelect" to="." method="_on_back_to_select_button_up"]
[connection signal="button_up" from="Players/Margin/Vertical/GameInfo/VBoxContainer2/PlayButton" to="." method="_on_play_button_button_up"]
